added css styling for each page
created 5 new css files and modified style.css, linked style.css to all pages for default styling. nothing new just styling

--- a/application/public/html/Index.html
+++ b/application/public/html/Index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My Website</title>
-  </head>
-  <body>
-    <header>
-      <h1>This is my website!</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="registration.html">Registration</a></li>
-          <li><a href="postvideo.html">Post Video</a></li>
-          <li><a href="viewpost.html">View Post</a></li>
-          <li><a href="profile.html">Profile</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h2>Thanks for visiting my website!</h2>
-      <p>Stay tuned for more!</p>
-    </main>
-    <footer>
-      <p>Footer</p>
-    </footer>
-  </body>
+
+<head>
+  <title>My Website</title>
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Home</h1>
+    <nav>
+      <ul>
+        <li><a href="Index.html">Home</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="registration.html">Registration</a></li>
+        <li><a href="postvideo.html">Post Video</a></li>
+        <li><a href="viewpost.html">View Post</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2>Thanks for visiting my website!</h2>
+    <p>Stay tuned for more!</p>
+  </main>
+  <footer>
+    <p>Footer</p>
+  </footer>
+</body>
+
 </html>
