--- a/application/public/html/profile.html
+++ b/application/public/html/profile.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>User Profile</title>
-  </head>
-  <body>
+
+<head>
+  <title>User Profile</title>
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/profile.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Profile</h1>
     <nav>
       <ul>
         <li><a href="Index.html">Home</a></li>
-        <li><a href="login.html">Log in</a></li>
-        <li><a href="registration.html">Register</a></li>
-        <li><a href="postvideo.html">Post a video</a></li>
-        <li><a href="viewpost.html">View video post</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="registration.html">Registration</a></li>
+        <li><a href="postvideo.html">Post Video</a></li>
+        <li><a href="viewpost.html">View Post</a></li>
+        <li><a href="profile.html">Profile</a></li>
       </ul>
     </nav>
-    <section>
-      <h1>User Profile</h1>
-      <p>Username: john123</p>
-      <p>Email: john123@gmail.com</p>
-      
-      <h2>Posts</h2>
-      <ul>
-        <li><a href="#">Post Title 1</a></li>
-        <li><a href="#">Post Title 2</a></li>
-        <li><a href="#">Post Title 3</a></li>
-      </ul>
-    </section>
-  </body>
+  </header>
+  <section>
+    <h1>User Profile</h1>
+    <p>Username: john123</p>
+    <p>Email: john123@gmail.com</p>
+
+    <h2>Posts</h2>
+    <ul>
+      <li><a href="#">Your Post 1</a></li>
+      <li><a href="#">Your Post 2</a></li>
+      <li><a href="#">Your Post 3</a></li>
+    </ul>
+  </section>
+  <footer>
+    <p>Footer</p>
+  </footer>
+</body>
+
 </html>
