--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Registration</title>
+	<link rel="stylesheet" type="text/css" href="../css/style.css" />
+	<link rel="stylesheet" type="text/css" href="../css/registration.css" />
 </head>
+
 <body>
 	<header>
-		<h1>My Website</h1>
+		<h1>Registration</h1>
 		<nav>
 			<ul>
 				<li><a href="Index.html">Home</a></li>
@@ -52,7 +56,8 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2023 My Website</p>
+		<p>Footer</p>
 	</footer>
 </body>
+
 </html>
