--- a/application/public/html/viewpost.html
+++ b/application/public/html/viewpost.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>View Post</title>
-  </head>
-  <body>
+
+<head>
+  <title>View Post</title>
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/viewpost.css" />
+</head>
+
+<body>
+  <header>
+    <h1>View a Post</h1>
     <nav>
       <ul>
         <li><a href="Index.html">Home</a></li>
@@ -14,31 +20,36 @@
         <li><a href="profile.html">Profile</a></li>
       </ul>
     </nav>
+  </header>
 
-    <h1>Funny Video</h1>
-    <p>Posted by: funny videos channel</p>
-    <p>Posted on: March 1, 2023</p>
+  <h1>Funny Video</h1>
+  <p>Posted by: funny videos channel</p>
+  <p>Posted on: March 1, 2023</p>
 
-    <video controls>
-      <source src="my_video.mp4" type="video/mp4">
-    </video>
+  <video controls>
+    <source src="my_video.mp4" type="video/mp4">
+  </video>
 
-    <h2>Comments</h2>
-    <form>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name"><br>
+  <h2>Comments</h2>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name"><br>
 
-      <label for="comment">Comment:</label>
-      <textarea id="comment" name="comment"></textarea><br>
+    <label for="comment">Comment:</label>
+    <textarea id="comment" name="comment"></textarea><br>
 
-      <button type="submit">Submit</button>
-    </form>
+    <button type="submit">Submit</button>
+  </form>
 
-    <div>
-      <p>Comment 1</p>
-      <p>Comment 2</p>
-      <p>Comment 3</p>
-    </div>
-    
-  </body>
+  <div>
+    <p>Comment 1</p>
+    <p>Comment 2</p>
+    <p>Comment 3</p>
+  </div>
+
+  <footer>
+    <p>Footer</p>
+  </footer>
+</body>
+
 </html>
