--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <header>
-      <h1>Login</h1>
-      <nav>
-        <ul>
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="registration.html">Registration</a></li>
-          <li><a href="postvideo.html">Post Video</a></li>
-          <li><a href="viewpost.html">View Post</a></li>
-          <li><a href="profile.html">Profile</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h2>Please Log In</h2>
-      <form>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
+<head>
+  <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/login.css" />
+</head>
 
-        <button type="submit">Log In</button>
-      </form>
-    </main>
-  </body>
+<body>
+  <header>
+    <h1>Login</h1>
+    <nav>
+      <ul>
+        <li><a href="Index.html">Home</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="registration.html">Registration</a></li>
+        <li><a href="postvideo.html">Post Video</a></li>
+        <li><a href="viewpost.html">View Post</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2>Please Log In</h2>
+    <form>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required><br>
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required><br>
+
+      <button type="submit">Log In</button>
+    </form>
+  </main>
+  <footer>
+    <p>Footer</p>
+  </footer>
+</body>
+
 </html>
