--- a/application/public/html/postvideo.html
+++ b/application/public/html/postvideo.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Post a Video</title>
+	<link rel="stylesheet" type="text/css" href="../css/style.css" />
+	<link rel="stylesheet" type="text/css" href="../css/postvideo.css" />
 </head>
+
 <body>
 	<header>
-		<h1>Website Videos</h1>
+		<h1>Post a Video</h1>
 		<nav>
 			<ul>
 				<li><a href="Index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="registration.html">Registration</a></li>
-                <li><a href="postvideo.html">Post Video</a></li>
-                <li><a href="viewpost.html">View Post</a></li>
-                <li><a href="profile.html">Profile</a></li>
+				<li><a href="login.html">Login</a></li>
+				<li><a href="registration.html">Registration</a></li>
+				<li><a href="postvideo.html">Post Video</a></li>
+				<li><a href="viewpost.html">View Post</a></li>
+				<li><a href="profile.html">Profile</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -37,5 +41,9 @@
 			</form>
 		</section>
 	</main>
+	<footer>
+		<p>Footer</p>
+	</footer>
 </body>
+
 </html>
