--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -5,6 +5,7 @@
 	<title>Registration</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="stylesheet" type="text/css" href="../css/registration.css" />
+	<script src="registration.js"></script>
 </head>
 
 <body>
